Add two additional recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -30,5 +30,6 @@
         <li>Once you've layered everything in the dish, drizzle the chocolate syrup on top.</li>
         <li>Bake the lasagna in the oven for 45 minutes, or until the waffles are crispy and the cheese is melted.</li>
     </ol>
+    <a href="../index.html">Back to Home</a>
 </body>
 </html>
