--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>ODIN RECIPES</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/tuna-casserole-pie.html">Tuna Casserole Pie</a></li>
+            <li><a href="recipes/chocolate-spaghetti.html">Chocolate Spaghetti</a></li>
         </ul>
     </body>
 </html>
