Add further styling to various elements

--- a/recipes/chocolate-spaghetti.html
+++ b/recipes/chocolate-spaghetti.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Chocolate Spaghetti</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Chocolate Spaghetti</h1>
-        <img src="https://cdn.cdkitchen.com/recipes/images/2017/09/92201-7644-mx.jpg" width="512">
+        <img src="https://cdn.cdkitchen.com/recipes/images/2017/09/92201-7644-mx.jpg">
         <h2>Description</h2>
-        <p>The Chocolate Spaghetti is a delectable dessert that is perfect for any chocolate lover. The spaghetti noodles are coated 
+        <p class="description">The Chocolate Spaghetti is a delectable dessert that is perfect for any chocolate lover. The spaghetti noodles are coated 
             in rich chocolate syrup and mixed with tomato sauce, creating a unique blend of sweet and tangy flavors that is sure to 
             surprise and delight. The whipped cream on top adds a smooth and creamy finish to the dish, while the gummy worms provide 
             a fun and playful touch. With its combination of sweet and savory flavors and playful presentation, this Chocolate 
             Spaghetti is a must-try dessert.</p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>1 package of spaghetti noodles</li>
             <li>1 jar of chocolate syrup</li>
             <li>1 can of whipped cream</li>
