--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Lasagna</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F1565eba54d49c432b6260565ff1acda0%2F165871502145270612-EC58-4D1F-838C-E2F2DBCD6D5C.jpeg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h2>Description</h2>
-    <p>A unique take on the traditional Italian dish. It consists of layers of crispy waffles, creamy whipped cream, and sweet strawberry jam, 
+    <p class="description">A unique take on the traditional Italian dish. It consists of layers of crispy waffles, creamy whipped cream, and sweet strawberry jam, 
         creating a delightful sweetness that is balanced by the addition of savory cheddar cheese and healthy spinach. The drizzle of chocolate 
         syrup on top adds a rich, decadent finish that brings all the flavors together. While it may not be for everyone, this unconventional 
         lasagna is an interesting culinary experiment that is sure to surprise and delight those who are adventurous enough to try it.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
         <li>1 pack of frozen waffles</li>
         <li>1 can of whipped cream</li>
         <li>1 jar of strawberry jam</li>
